# farewell-helper

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.html  ARCHITECTURE.json  PERSONA.md  PROTOCOL.md  README.md  STACKS.md  _verify_rotation.py  farewell.combos.jsonc  farewell.json  opencode.jsonc  opencode.template.jsonc  pyproject.toml  sub-project-assistant.md
.github/workflows/: test.yml
farewell_helper/: __init__.py  __main__.py  archetype.py  cache_monitor.py  config.py  context_manager.py  helpers.py  mcp.py  pre_commit.py  rotate.py  router_client.py  setup_project.py  sync.py  task_planner.py  verify.py
farewell_helper/commands/: __init__.py  handoff_cmd.py  memory.py  notes_cmd.py  plan.py  project.py  state.py
farewell_helper/core/: io.py  learning.py  memory.py  session.py
skills/farewell-9router/: SKILL.md
skills/farewell-api-design/: SKILL.md
skills/farewell-audit/: SKILL.md
skills/farewell-c/: SKILL.md
skills/farewell-code-review/: SKILL.md
skills/farewell-codebase-design/: DEEPENING.md  DESIGN-IT-TWICE.md  SKILL.md
skills/farewell-devops/: SKILL.md
skills/farewell-diagnosing-bugs/: SKILL.md
skills/farewell-engineering/: SKILL.md
skills/farewell-error-handling/: SKILL.md
skills/farewell-flows/: SKILL.md
skills/farewell-flutter/: SKILL.md
skills/farewell-frontend/: SKILL.md
skills/farewell-git/: SKILL.md
skills/farewell-grill-with-docs/: SKILL.md
skills/farewell-grilling/: SKILL.md
skills/farewell-persona/: SKILL.md
sub-project/: service-hub.lnk
templates/: opencode.jsonc
tests/: test_cli.py
(+8 files in other folders)
