[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farewell-helper"
version = "5.0.0"
description = "OpenCode agent + 9Router model gateway + skills + persona"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
farewell-helper = "farewell_helper.commands:main"

[tool.hatch.build.targets.wheel]
packages = ["farewell_helper"]
